tests/behavior/error/optional_get_value1.bz
function main()
{
	mut i: ?int32 = null;

	__builtin_optional_get_value(i);
}
